test/pass/fibonacci.ditto
import Math;

func main() 
    int a := scan();
    print(Math::fib(a));
end