test/fail/ast/struct-in-func.ditto
func main()
    struct Person is
        int a;
    end
end